node server and connection

--- a/public/index.html
+++ b/public/index.html
@@ -12,21 +12,21 @@
         </div>
     </header>
     <div class="main-container">
-        <div >
-            Column 1
-        </div>
         <div class="reader">
             <textarea>
-
             </textarea>
-            <button id="okButton">
-                Ok
-            </button>
-        </div>
-        <div>
-            Column 3
+            <div class="buttonPanel">
+              <button class="okBut">
+                  Ok
+              </button>
+              <button  class="clearBut">
+                  Clear
+              </button>
+
+            </div>
+            
         </div>
     </div>
-    <script src="scripts/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
