--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
             </div>
             
         </div>
+        <textarea id="result">
+        </textarea>
     </div>
     <script src="js/main.js"></script>
 </body>
